Removed preview options from several experiments